@@ -12,11 +12,15 @@ ifneq (,$(filter $(DEB_HOST_ARCH),s390 s390x armel mips mipsel))
 endif
 
 ifeq ($(DEB_HOST_ARCH_OS),linux)
-	extra_configure_opts = DEFINES+=ENABLE_VIDEO=1 DEFINES+=ENABLE_GEOLOCATION=1
+	extra_configure_opts = DEFINES+=ENABLE_VIDEO=1 DEFINES+=WTF_USE_GSTREAMER=1
 endif
 
 %:
-	dh $@ --buildsystem=qmake --parallel --list-missing --dbg-package=libqtwebkit4-dbg --with pkgkde_symbolshelper
+	dh $@ --sourcedirectory=Source --buildsystem=qmake --parallel --list-missing --dbg-package=libqtwebkit4-dbg --with pkgkde_symbolshelper
 
 override_dh_auto_configure:
 	dh_auto_configure -- $(extra_configure_opts)
+
+override_dh_auto_clean:
+	rm -f Source/Makefile
+	dh_auto_clean
